Integrated monster-stories as package
monster-stories is now an independent npm package and is now included and
bundled with browserify.

--- a/index.html
+++ b/index.html
@@ -64,13 +64,9 @@
   <body>
     <div class="wrapper">
       <h1>A monster story generator</h1>
-      <button type="button" onclick="generateStory()">New Story</button>
+      <button id='storygen' type="button">New Story</button>
       <h2 id="story"></h2>
     </div>
-    <script src="names.js"></script>
-    <script src="monster.js"></script>
-    <script src="dungeon.js"></script>
-    <script src="storygen.js"></script>
-
+    <script src="bundle.js"></script>
   </body>
 </html> 
